Fixed issue with button text misaligning

--- a/src/sample/roundedbuttonstyle.css
+++ b/src/sample/roundedbuttonstyle.css
@@ -269,8 +269,26 @@
 -fx-text-fill: #000000;
 -fx-padding: 1;
 -fx-font-family: 'Roboto';
+-fx-alignment: center;
 -fx-font-size: 24px;
 -fx-effect: dropshadow( three-pass-box , black , 10 , 0.0 , 0 , 1 );
+}
+
+.go_back_to_shopping_button {
+-fx-background-color: #F2F0E9;
+-fx-border-width: 1px;
+-fx-border-color: #000000;
+-fx-text-fill: #000000;
+-fx-padding: 1;
+-fx-font-family: 'Roboto';
+-fx-alignment: center;
+-fx-font-size: 24px;
+-fx-effect: dropshadow( three-pass-box , black , 10 , 0.0 , 0 , 1 );
+}
+
+.go_back_to_shopping_button:hover {
+-fx-background-color: #E1DBC7;
+-fx-cursor: hand;
 }
 
 .go_back_button:hover {
@@ -290,6 +308,22 @@
 }
 
 .next_step_button:hover {
+-fx-background-color: #d19f41;
+-fx-cursor: hand;
+}
+
+.next_step_button_final {
+-fx-background-color: #F2B84B;
+-fx-text-fill: #000000;
+-fx-border-width: 1px;
+-fx-border-color: #000000;
+-fx-padding: 1;
+-fx-font-family: 'Roboto';
+-fx-font-size: 24px;
+-fx-effect: dropshadow( three-pass-box , black , 10 , 0.0 , 0 , 1 );
+}
+
+.next_step_button_final:hover {
 -fx-background-color: #d19f41;
 -fx-cursor: hand;
 }
